add statistics